fixing bg on mobile

--- a/index.css
+++ b/index.css
@@ -796,12 +796,12 @@ section {
     font-size: 16px;
   }
 
- /* body {
+  body {
       background-image: url("./otherLogoAndImg/mobilebg.jpg");
-    background-attachment: scroll;
+   /* background-attachment: scroll;
     background-repeat: repeat;
-    background-size: cover;
-  }*/
+    background-size: cover;*/
+  }
 
   div.section {
     width: 97.5%;
